--- a/css/style-chocolate.css
+++ b/css/style-chocolate.css
@@ -142,8 +142,7 @@ header div.logo img {
   height: 100%;
   width: 100%;
   top: 0;
-  left: 0;
-  min-height: 120px; }
+  left: 0; }
 
 .single-cover .title.center {
   text-align: center;
@@ -1280,24 +1279,24 @@ aside .recent-posts-box ul li a {
 15.0 - Footer
 ================================================================================================
 */
-footer {
+footer#footer {
   background: #5f3633; }
 
-footer {
+footer#footer {
   padding: 35px 20px 25px 20px;
   color: #FFF; }
 
-footer .copyright {
+footer#footer .copyright {
   font-size: 0.9em;
   margin-bottom: 0px; }
 
-footer .copyright a {
+footer#footer .copyright a {
   color: #020d16; }
 
-footer .copyright a:hover {
+footer#footer .copyright a:hover {
   color: #FFF; }
 
-footer .footer-bar {
+footer#footer .footer-bar {
   margin-bottom: 25px;
   background-image: url("../img/bright-squares.png");
   background-blend-mode: normal;
@@ -1306,33 +1305,33 @@ footer .footer-bar {
   margin-top: 20px;
   background-attachment: fixed; }
 
-footer .footer-bar form {
+footer#footer .footer-bar form {
   max-width: 100%;
   overflow: hidden; }
 
-footer button.search-submit.button.small {
+footer#footer button.search-submit.button.small {
   padding: 0.50rem 1.2rem;
   height: 2.4rem;
   overflow: hidden; }
 
-footer button.search-submit i {
+footer#footer button.search-submit i {
   font-size: 1.4em; }
 
-footer .widget .button.small {
+footer#footer .widget .button.small {
   padding-left: 5px;
   padding-right: 5px;
   width: 100%;
   font-size: 1em;
   padding: 0.55em; }
 
-footer .footer-bar .widget-title {
+footer#footer .footer-bar .widget-title {
   color: #FFF; }
 
-footer .footer-bar {
+footer#footer .footer-bar {
   margin-top: 20px;
   background-color: #020d16; }
 
-footer .footer-bar .widget-title {
+footer#footer .footer-bar .widget-title {
   font-family: "Montserrat", Helvetica, sans-serif;
   text-transform: uppercase;
   border-bottom: solid 1px;
@@ -1340,10 +1339,10 @@ footer .footer-bar .widget-title {
   display: block;
   margin-bottom: 15px; }
 
-footer .back-to-top-wrapper {
+footer#footer .back-to-top-wrapper {
   position: relative; }
 
-footer a.back-to-top {
+footer#footer a.back-to-top {
   width: 60px;
   height: 60px;
   -moz-border-radius: 30px;
@@ -1358,12 +1357,12 @@ footer a.back-to-top {
   bottom: 30%;
   font-size: 2em; }
 
-footer a.back-to-top:hover {
+footer#footer a.back-to-top:hover {
   color: #5f3633;
   background: #fff;
   border: solid 1px #5f3633; }
 
-footer a#back-to-top {
+footer#footer a#back-to-top {
   opacity: 1;
   z-index: 999; }
 
@@ -1544,7 +1543,8 @@ footer .breadcrumbs > *::before {
 
 .breadcrumbs > * {
   color: #000;
-  font-size: 0.7em; }
+  font-size: 0.7em;
+  line-height: 1.2rem; }
 
 .breadcrumbs a {
   color: #5f3633; }
